--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,10 @@
     "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.23.2"
   }
 }
