--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.3.2",
     "reactstrap": "^9.1.4",
+    "tsparticles": "^2.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
