--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.23.2"
