--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "combine-reducers": "^1.0.0",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
     "dotenv": "^16.0.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -17,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.3.2",
     "reactstrap": "^9.1.4",
+    "recharts": "^2.1.14",
     "tsparticles": "^2.3.2",
     "web-vitals": "^2.1.4"
   },
