--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,12 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "force": "^0.0.3",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.23.2",
     "sequelize-cli": "^6.5.1",
     "session-file-store": "^1.5.0"
-
   }
 }
